--- a/piro/notebooks/BaTiO3-Example-Colab.ipynb
+++ b/piro/notebooks/BaTiO3-Example-Colab.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install git+https://github.com/TRI-AMDD/piro.git"
+    "!pip install piro"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "MP_API_KEY = '<your api key here>' #@param {type:\"string\"}\n",
-    "!pmg config --add PMG_MAPI_KEY {MP_API_KEY}"
+    "!export PMG_MAPI_KEY {MP_API_KEY}"
    ]
   },
   {
@@ -3272,7 +3272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3286,7 +3286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
